--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -28,11 +33,19 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: #1a1a1a;
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+}
+
+#root{
+
+  width: 1440px;
+ padding: 0;
+  background-color: black;
 }
 
 button {
