--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,90 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+    max-width: 1920px;
+    margin: 0 auto;
+    padding: 0;
+    background-color: black;
+    overflow-x: hidden;
 }
 
+
+@media (min-width: 1200px) {   #root {
+    width: 960px;
+    min-height: 100vh;
+
+}
+}
+
+@media (min-width: 768px) and (max-width: 979px) {
+    #root {
+    width: 720px;
+    min-height: 100vh;
+        overflow-x: hidden;
+}
+}
+
+@media (max-width: 767px) {  #root {
+    width: 540px;
+    min-height: 100vh;
+    padding: 10px;
+    text-align: center;
+    overflow-x: hidden;
+} }
+
+@media (max-width: 480px) {  #root {
+    width:100%;
+    min-height: 100vh;
+    padding: 10px;
+    text-align: center;
+    overflow-x: hidden;
+} }
+
+
+
+
+
+
+
+
+
+/* Большой дисплей */
+
+
 .logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+    height: 6em;
+    padding: 1.5em;
+    will-change: filter;
+    transition: filter 300ms;
 }
+
 .logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+    filter: drop-shadow(0 0 2em #646cffaa);
 }
+
 .logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+    filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
 @keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+    a:nth-of-type(2) .logo {
+        animation: logo-spin infinite 20s linear;
+    }
 }
 
 .card {
-  padding: 2em;
+    padding: 2em;
 }
 
 .read-the-docs {
-  color: #888;
+    color: #888;
 }
+
+
